--- a/pro/award-2021-silver.html
+++ b/pro/award-2021-silver.html
@@ -286,16 +286,39 @@
                     <button class="search-submit-btn btn">搜尋</button>
                 </div>
                 <div class="category">
-                    <ul>
+                    <ul class="category-pc">
                         <li><a href="" class="active btn">全部</a></li>
-                        <li><a href="" class="btn">營造建築</a></li>
-                        <li><a href="" class="btn">科技研發</a></li>
-                        <li><a href="" class="btn">製造業</a></li>
-                        <li><a href="" class="btn">金融管顧</a></li>
+                        <li><a href="" class="btn">一般生活服務</a></li>
+                        <li><a href="" class="btn">休閒娛樂服務</a></li>
+                        <li><a href="" class="btn">餐飲服務</a></li>
+                        <li><a href="" class="btn">飯店旅宿</a></li>
                         <li><a href="" class="btn">大傳教育社福</a></li>
+                        <li><a href="" class="btn">金融管顧</a></li>
+                        <li><a href="" class="btn">科技研發</a></li>
+                        <li><a href="" class="btn">生技醫療</a></li>
+                        <li><a href="" class="btn">營造業</a></li>
                         <li><a href="" class="btn">貿易流通</a></li>
-                        <li><a href="" class="btn">民生服務業</a></li>
+                        <li><a href="" class="btn">營造建築</a></li>
                     </ul>
+                    <div class="category-sp search-bar classBtn">
+                        <!-- <input type="search" placeholder=請輸入公司或品牌關鍵字> -->
+                        <select class="filter">
+                            <option disabled selected>選類別</option>
+                            <option value="全部">全部</option>
+                            <option value="一般生活服務">一般生活服務</option>
+                            <option value="休閒娛樂服務">休閒娛樂服務</option>
+                            <option value="餐飲服務">餐飲服務</option>
+                            <option value="飯店旅宿">飯店旅宿</option>
+                            <option value="大傳教育社福">大傳教育社福</option>
+                            <option value="金融管顧">金融管顧</option>
+                            <option value="科技研發">科技研發</option>
+                            <option value="生技醫療">生技醫療</option>
+                            <option value="營造業">營造業</option>
+                            <option value="貿易流通">貿易流通</option>
+                            <option value="營造建築">營造建築</option>
+                        </select>
+                        <button class="search-submit-btn btn">搜尋</button>
+                    </div>
                 </div>
             </div>
             <div class="award-content silver-content">
