--- a/src/award-2021-gold.html
+++ b/src/award-2021-gold.html
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="filter">
-                <p class="p1">防疫期間眾多企業營運充滿挑戰，不僅要顧及員工安危更要兼顧營運，實屬不易因此本次票選廣增銀獎，讓台灣職場圍繞幸福企業正能量。</p>
+                <p class="p1">此次幸褔企業票選經歷本土疫情攪局，評選工作一度停擺，1111人力銀行幸福企業活動小組及顧問團經縝密的討論綜合網路票選、評審團評比（問卷調查），取前15~20%頒贈金獎（依不同類別而有所差異，因各類別之網路票選得票占比有所落差）。</p>
                 <div class="search-bar classBtn">
                     <input type="search" placeholder="職缺/職務關鍵字">
                     <button class="search-submit-btn btn">搜尋</button>
