--- a/src/searchResult-news.html
+++ b/src/searchResult-news.html
@@ -24,7 +24,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -96,7 +96,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -168,7 +168,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -240,7 +240,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -312,7 +312,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
