--- a/pro/searchResult-issue.html
+++ b/pro/searchResult-issue.html
@@ -19,13 +19,13 @@
             <a href="#" class="p2">年度盛事 <span><i class="fa-solid fa-angle-down"></i></span> </a> 
             <ul class="dropdown-menu">
                 <li><a href="application.html">品牌報名</a></li>
-                <li><a href="https://www.surveycake.com/s/MR2V4">網友推薦</a></li>
-                <li><a href="#">品牌票選</a></li>
+                <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">網友推薦</a></li>
+                <li><a href="vote.html">品牌票選</a></li>
                 <li><a href="lottery.html">票選抽獎</a></li>
-                <li><a href="#">2023得獎名單</a></li>
-                <li><a href="#">2022得獎名單</a></li>
-                <li><a href="#">2021得獎名單</a></li>
-                <li><a href="#">2019得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2023得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2022得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2021得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2019得獎名單</a></li>
             </ul>
         </li>
     
@@ -73,13 +73,14 @@
             <li>
                 <a href="#">年度盛事&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
                 <ul>
-                    <li><a href="#">&emsp;網友推薦</a> </li>
-                    <li><a href="#">&emsp;品牌票選</a> </li>
-                    <li><a href="#">&emsp;票選抽獎</a> </li>
-                    <li><a href="#">&emsp;2023得獎名單</a> </li>
-                    <li><a href="#">&emsp;2022得獎名單</a> </li>
-                    <li><a href="#">&emsp;2021得獎名單</a> </li>
-                    <li><a href="#">&emsp;2019得獎名單</a> </li>
+                    <li><a href="application.html">&emsp;品牌報名</a></li>
+                    <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">&emsp;網友推薦</a> </li>
+                    <li><a href="vote.html">&emsp;品牌票選</a></li>
+                    <li><a href="lottery.html">&emsp;票選抽獎</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2023得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2022得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2021得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2019得獎名單</a></li>
                 </ul>
             </li>
             <li>
@@ -234,7 +235,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -253,6 +254,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -306,7 +308,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -325,6 +327,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -378,7 +381,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -397,6 +400,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -450,7 +454,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -469,6 +473,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -522,7 +527,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -541,6 +546,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
