--- a/pro/searchResult-news.html
+++ b/pro/searchResult-news.html
@@ -19,13 +19,13 @@
             <a href="#" class="p2">年度盛事 <span><i class="fa-solid fa-angle-down"></i></span> </a> 
             <ul class="dropdown-menu">
                 <li><a href="application.html">品牌報名</a></li>
-                <li><a href="https://www.surveycake.com/s/MR2V4">網友推薦</a></li>
-                <li><a href="#">品牌票選</a></li>
+                <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">網友推薦</a></li>
+                <li><a href="vote.html">品牌票選</a></li>
                 <li><a href="lottery.html">票選抽獎</a></li>
-                <li><a href="#">2023得獎名單</a></li>
-                <li><a href="#">2022得獎名單</a></li>
-                <li><a href="#">2021得獎名單</a></li>
-                <li><a href="#">2019得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2023得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2022得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2021得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2019得獎名單</a></li>
             </ul>
         </li>
     
@@ -73,13 +73,14 @@
             <li>
                 <a href="#">年度盛事&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
                 <ul>
-                    <li><a href="#">&emsp;網友推薦</a> </li>
-                    <li><a href="#">&emsp;品牌票選</a> </li>
-                    <li><a href="#">&emsp;票選抽獎</a> </li>
-                    <li><a href="#">&emsp;2023得獎名單</a> </li>
-                    <li><a href="#">&emsp;2022得獎名單</a> </li>
-                    <li><a href="#">&emsp;2021得獎名單</a> </li>
-                    <li><a href="#">&emsp;2019得獎名單</a> </li>
+                    <li><a href="application.html">&emsp;品牌報名</a></li>
+                    <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">&emsp;網友推薦</a> </li>
+                    <li><a href="vote.html">&emsp;品牌票選</a></li>
+                    <li><a href="lottery.html">&emsp;票選抽獎</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2023得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2022得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2021得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2019得獎名單</a></li>
                 </ul>
             </li>
             <li>
@@ -234,7 +235,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -306,7 +307,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -378,7 +379,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -450,7 +451,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -522,7 +523,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
