--- a/pro/single-post.html
+++ b/pro/single-post.html
@@ -20,13 +20,13 @@
             <a href="#" class="p2">年度盛事 <span><i class="fa-solid fa-angle-down"></i></span> </a> 
             <ul class="dropdown-menu">
                 <li><a href="application.html">品牌報名</a></li>
-                <li><a href="https://www.surveycake.com/s/MR2V4">網友推薦</a></li>
-                <li><a href="#">品牌票選</a></li>
+                <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">網友推薦</a></li>
+                <li><a href="vote.html">品牌票選</a></li>
                 <li><a href="lottery.html">票選抽獎</a></li>
-                <li><a href="#">2023得獎名單</a></li>
-                <li><a href="#">2022得獎名單</a></li>
-                <li><a href="#">2021得獎名單</a></li>
-                <li><a href="#">2019得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2023得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2022得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2021得獎名單</a></li>
+                <li><a href="award-2021-gold.html">2019得獎名單</a></li>
             </ul>
         </li>
     
@@ -74,13 +74,14 @@
             <li>
                 <a href="#">年度盛事&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
                 <ul>
-                    <li><a href="#">&emsp;網友推薦</a> </li>
-                    <li><a href="#">&emsp;品牌票選</a> </li>
-                    <li><a href="#">&emsp;票選抽獎</a> </li>
-                    <li><a href="#">&emsp;2023得獎名單</a> </li>
-                    <li><a href="#">&emsp;2022得獎名單</a> </li>
-                    <li><a href="#">&emsp;2021得獎名單</a> </li>
-                    <li><a href="#">&emsp;2019得獎名單</a> </li>
+                    <li><a href="application.html">&emsp;品牌報名</a></li>
+                    <li><a href="https://www.surveycake.com/s/MR2V4" target="_blank">&emsp;網友推薦</a> </li>
+                    <li><a href="vote.html">&emsp;品牌票選</a></li>
+                    <li><a href="lottery.html">&emsp;票選抽獎</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2023得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2022得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2021得獎名單</a></li>
+                    <li><a href="award-2021-gold.html">&emsp;2019得獎名單</a></li>
                 </ul>
             </li>
             <li>
@@ -329,7 +330,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row recommended">
+                    <!-- <div class="row recommended">
                         <p class="p1 job-title">推薦文章</p>
                         <div class="g-article">
                             <a class="a-item">
@@ -349,7 +350,7 @@
                                 <p class="p1 title">爭鮮集團幸福大募集 徵儲備幹部、正兼職人員</p>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="section bottom">
