--- a/src/searchResult-issue.html
+++ b/src/searchResult-issue.html
@@ -24,7 +24,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -43,6 +43,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -96,7 +97,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -115,6 +116,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -168,7 +170,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -187,6 +189,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -240,7 +243,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -259,6 +262,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
@@ -312,7 +316,7 @@
                         <img src="assets/img/archive-ex-img.png" alt="">
                     </div>
                     <div class="col post-content">
-                        <h4>金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</h4>
+                        <a href="" class="h4">金屬中心榮獲「111年度小勞雄福企溫暖心城市」幸福企業大獎</a>
                         <p class="p1 date">
                             <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -331,6 +335,7 @@
                         </p>
                         <p class="p2 content">財團法人金屬工業研究發展中心榮獲幸福企業獎。圖/金屬中心 高雄市政府勞工局舉辦「小勞雄福企
                             溫暖心城市」幸福企業評選活動，財團法人金屬工業研究發展中心首次參加，即榮獲大型企業組的幸福企業獎</p>
+                        <p class="p1 company-title">公司抬頭</p>
                         <div class="row link">
                             <div class="col category">
                                 <ul>
