--- a/src/single-post.html
+++ b/src/single-post.html
@@ -119,7 +119,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row recommended">
+                    <!-- <div class="row recommended">
                         <p class="p1 job-title">推薦文章</p>
                         <div class="g-article">
                             <a class="a-item">
@@ -139,7 +139,7 @@
                                 <p class="p1 title">爭鮮集團幸福大募集 徵儲備幹部、正兼職人員</p>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="section bottom">
