--- a/src/application.html
+++ b/src/application.html
@@ -122,11 +122,11 @@
                         <input type="mail" class="require-fill">
                     </li>
                 </ul>
+                <div class="row">
+                    <button class="btn submit">確認報名</button>
+                    <button class="btn cancel">取消</button>
+                </div>
             </form>
-            <div class="row">
-                <button class="btn submit">確認報名</button>
-                <button class="btn cancel">取消</button>
-            </div>
         </div>
         <div class="application-container">
             
@@ -271,7 +271,7 @@
         </div>
     </div>
     <!-- 投票獎勵說明彈窗 -->
-    <div class="apply-dialog dialog-application-info">
+    <div style="display:none" class="apply-dialog dialog-application-info">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -312,7 +312,7 @@
         </div>
     </div>
     <!-- 填寫完表單完成的報名彈窗 -->
-    <div class="apply-dialog dialog-finished">
+    <div style="display:none" class="apply-dialog dialog-finished">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -344,7 +344,7 @@
         </div>
     </div>
     <!-- 圖檔格式錯誤彈窗 -->
-    <div class="apply-dialog dialog-imgerror">
+    <div style="display:none" class="apply-dialog dialog-imgerror">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -376,7 +376,7 @@
         </div>
     </div>
     <!-- 未填寫完畢彈窗 -->
-    <div class="apply-dialog dialog-incomplete">
+    <div style="display:none" class="apply-dialog dialog-incomplete">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -408,7 +408,7 @@
         </div>
     </div>
     <!-- 欄位填寫有誤彈窗 -->
-    <div class="apply-dialog dialog-wrong">
+    <div style="display:none" class="apply-dialog dialog-wrong">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
