--- a/pro/vote.html
+++ b/pro/vote.html
@@ -335,11 +335,11 @@
                         <input type="mail" class="require-fill">
                     </li>
                 </ul>
+                <div class="row">
+                    <button class="btn submit">確認報名</button>
+                    <button class="btn cancel">取消</button>
+                </div>
             </form>
-            <div class="row">
-                <button class="btn submit">確認報名</button>
-                <button class="btn cancel">取消</button>
-            </div>
         </div>
         <div class="vote-container">
             <div class="row vote-list">
@@ -1231,7 +1231,7 @@
         </div>
     </div>
     <!-- 填寫完表單完成的報名彈窗 -->
-    <div class="apply-dialog dialog-finished">
+    <div style="display:none" class="apply-dialog dialog-finished">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1289,7 +1289,7 @@
         </div>
     </div>
     <!-- 圖檔格式錯誤彈窗 -->
-    <div class="apply-dialog dialog-imgerror">
+    <div style="display:none" class="apply-dialog dialog-imgerror">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1347,7 +1347,7 @@
         </div>
     </div>
     <!-- 未填寫完畢彈窗 -->
-    <div class="apply-dialog dialog-incomplete">
+    <div style="display:none" class="apply-dialog dialog-incomplete">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1405,7 +1405,7 @@
         </div>
     </div>
     <!-- 欄位填寫有誤彈窗 -->
-    <div class="apply-dialog dialog-wrong">
+    <div style="display:none" class="apply-dialog dialog-wrong">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1463,7 +1463,7 @@
         </div>
     </div>
     <!-- 尚未登入就點投票的彈窗 -->
-    <div class="apply-dialog login-yet">
+    <div style="display:none" class="apply-dialog login-yet">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1521,7 +1521,7 @@
         </div>
     </div>
     <!-- 登入但未認證就點投票的彈窗 -->
-    <div class="apply-dialog not-verified">
+    <div style="display:none" class="apply-dialog not-verified">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1579,7 +1579,7 @@
         </div>
     </div>
     <!-- 成功點擊投票後出現的彈窗 -->
-    <div class="apply-dialog voted">
+    <div style="display:none" class="apply-dialog voted">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
