--- a/src/vote.html
+++ b/src/vote.html
@@ -124,11 +124,11 @@
                         <input type="mail" class="require-fill">
                     </li>
                 </ul>
+                <div class="row">
+                    <button class="btn submit">確認報名</button>
+                    <button class="btn cancel">取消</button>
+                </div>
             </form>
-            <div class="row">
-                <button class="btn submit">確認報名</button>
-                <button class="btn cancel">取消</button>
-            </div>
         </div>
         <div class="vote-container">
             <div class="row vote-list">
@@ -1020,7 +1020,7 @@
         </div>
     </div>
     <!-- 填寫完表單完成的報名彈窗 -->
-    <div class="apply-dialog dialog-finished">
+    <div style="display:none" class="apply-dialog dialog-finished">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1078,7 +1078,7 @@
         </div>
     </div>
     <!-- 圖檔格式錯誤彈窗 -->
-    <div class="apply-dialog dialog-imgerror">
+    <div style="display:none" class="apply-dialog dialog-imgerror">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1136,7 +1136,7 @@
         </div>
     </div>
     <!-- 未填寫完畢彈窗 -->
-    <div class="apply-dialog dialog-incomplete">
+    <div style="display:none" class="apply-dialog dialog-incomplete">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1194,7 +1194,7 @@
         </div>
     </div>
     <!-- 欄位填寫有誤彈窗 -->
-    <div class="apply-dialog dialog-wrong">
+    <div style="display:none" class="apply-dialog dialog-wrong">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1252,7 +1252,7 @@
         </div>
     </div>
     <!-- 尚未登入就點投票的彈窗 -->
-    <div class="apply-dialog login-yet">
+    <div style="display:none" class="apply-dialog login-yet">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1310,7 +1310,7 @@
         </div>
     </div>
     <!-- 登入但未認證就點投票的彈窗 -->
-    <div class="apply-dialog not-verified">
+    <div style="display:none" class="apply-dialog not-verified">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
@@ -1368,7 +1368,7 @@
         </div>
     </div>
     <!-- 成功點擊投票後出現的彈窗 -->
-    <div class="apply-dialog voted">
+    <div style="display:none" class="apply-dialog voted">
         <div class="dialog-bg"></div>
         <div class="container">
             <div class="deco">
