首頁樣式調整

--- a/src/application.html
+++ b/src/application.html
@@ -158,7 +158,7 @@
                             <div class="row">
                                 <h5>網路票選</h5>
                                 <p class="p1">時間：<span class="red">3/13(一)～6/13(二)</span></p>
-                                <p class="p1">方式：<span class="fw-300">凡參加票選者，皆有可有資格參加天天抽幸福金活動。<b>(票選期間每週一至週五天天抽出10名500元幸運兒)</b></span></p>
+                                <p class="p1">投票獎勵：<span class="fw-300">凡參加票選者，皆有可有資格參加天天抽幸福金活動。<b>(票選期間每週一至週五天天抽出10名500元幸運兒)</b></span></p>
                                 <p class="p1">兌領方式：<span class="fw-300">每日中獎結果詳見活動網頁(中獎者須主動聯絡負責窗口，1111人力銀行不另行通知。) </span></p>
                             </div>
                             <div class="row">
